# src/modules/category/dto/create-category.dto.ts
@@ -1,0 +1,33 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class CreateCategoryDto {
+  @ApiProperty({
+    description: 'Nombre de la categoría',
+    example: 'Electrónica',
+  })
+  @IsString()
+  @IsNotEmpty()
+  name: string;
+
+  @ApiProperty({
+    description: 'Descripción de la categoría',
+    example: 'Productos electrónicos',
+  })
+  @IsString()
+  description: string;
+
+  @ApiProperty({
+    description: 'ID del tenant',
+    example: '63f1b23c9a7d2e1234abcd56',
+  })
+  @IsString()
+  @IsNotEmpty()
+  tenantId: string;
+
+  @ApiProperty({
+    description: 'Activa',
+    example: true,
+  })
+  isActive: boolean;
+}
