# src/modules/category/dto/update-category.dto.ts
@@ -1,0 +1,27 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString } from 'class-validator';
+
+export class UpdateCategoryDto {
+  @ApiProperty({
+    description: 'Nombre actualizado de la categoría',
+    example: 'Ropa',
+    required: false,
+  })
+  @IsString()
+  name?: string;
+
+  @ApiProperty({
+    description: 'Descripción actualizada de la categoría',
+    example: 'Ropa de moda',
+    required: false,
+  })
+  @IsString()
+  description?: string;
+
+  @ApiProperty({
+    description: 'Activa',
+    example: true,
+    required: false,
+  })
+  isActive?: boolean;
+}
